Complete initial routing implementation

--- a/src/components/CtaButton/CtaButton.scss
+++ b/src/components/CtaButton/CtaButton.scss
@@ -13,6 +13,7 @@
     width: 100%;
     height: 2.5rem;
     cursor: pointer;
+    @include mixins.flexbox(center, center);
 
     &:hover {
         background-color: colors.$secondary-blue;
