--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -15,55 +15,55 @@
         @include mixins.flexbox($align-items: center, $wrap: wrap);
     }
 
-    //Containers wrap elements to control spacing and size constraints.
-    &__container {
+    &__logo-container {
+        margin: 0.5rem;
+        flex: 100%;
+
+        @include tablet {
+            margin-right: auto;
+            flex: 0;
+        }
+
+        @include desktop {
+            margin-left: 0;
+        }
+    }
+
+    &__search-container {
+        margin: 0.5rem;
+        flex: 1;
+
+        @include tablet {
+            margin-right: 1rem;
+            flex: 0 15rem;
+        }
+    }
+
+    &__avatar-container {
         margin: 0.5rem;
 
-        &--logo {
-            flex: 100%;
-
-            @include tablet {
-                margin-right: auto;
-                flex: 0;
-            }
-
-            @include desktop {
-                margin-left: 0;
-            }
+        @include tablet {
+            flex: 0;
+            order: 2;
         }
 
-        &--search-bar {
-            flex: 1;
+        @include desktop {
+            margin-right: 0.75rem;
+        }
+    }
 
-            @include tablet {
-                margin-right: 1rem;
-                flex: 0 15rem;
-            }
+    &__upload-container {
+        margin: 0.5rem;
+        flex: 100%;
+
+        @include tablet {
+            margin-right: 0.75rem;
+            flex: 0 9.75rem;
         }
 
-        &--avatar {
-            @include tablet {
-                flex: 0;
-                order: 2;
-            }
-
-            @include desktop {
-                margin-right: 0.75rem;
-            }
-        }
-
-        &--upload-btn {
-            flex: 100%;
-
-            @include tablet {
-                margin-right: 0.75rem;
-                flex: 0 9.75rem;
-            }
-
-            @include desktop {
-                margin-right: 1.75rem;
-                flex: 0 9.25rem;
-            }
+        @include desktop {
+            margin-right: 1.75rem;
+            flex: 0 9.25rem;
         }
     }
 }
