Refactor scss container modifiers into container elements (2/2)

--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -39,9 +39,7 @@
         padding: 1rem 0;
     }
 
-    &__container {
-        &--home-button {
-            max-width: 9.25rem;
-        }
+    &__home-button-container {
+        max-width: 9.25rem;
     }
 }
