--- a/src/components/UploadForm/UploadForm.scss
+++ b/src/components/UploadForm/UploadForm.scss
@@ -56,12 +56,15 @@
     }
 
     &__label {
+        cursor: pointer;
         @include fonts.labelsbuttons;
         color: colors.$primary-gray;
+        position: relative;
     }
 
     &__thumbnail {
         @include mixins.rounded-corners;
+        display: block;
         margin-top: 0.125rem;
         width: 100%;
         height: 10rem;
@@ -99,6 +102,28 @@
             @include tablet {
                 padding-left: 1rem;
             }
+        }
+    }
+
+    &__file-input {
+        cursor: pointer;
+        color: colors.$primary-white;
+        background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 1)
+        );
+        opacity: 0.5;
+        @include mixins.rounded-corners;
+        width: 100%;
+        padding: 1rem;
+        position: absolute;
+        bottom: 0;
+        left: 0rem;
+
+        &:hover,
+        *:hover > & {
+            opacity: 1;
         }
     }
 }
