--- a/src/components/UploadForm/UploadForm.scss
+++ b/src/components/UploadForm/UploadForm.scss
@@ -65,6 +65,7 @@
     &__thumbnail {
         @include mixins.rounded-corners;
         display: block;
+        object-fit: cover;
         margin-top: 0.125rem;
         width: 100%;
         height: 10rem;
@@ -120,6 +121,7 @@
         position: absolute;
         bottom: 0;
         left: 0rem;
+        transition: all 0.2s ease-out;
 
         &:hover,
         *:hover > & {
