Cleanup code for UploadForm and UploadPage
-Refactor variable names to be more explicit
-Remove unsed blocks
-Fix size styling bugs

--- a/src/pages/UploadPage/UploadPage.scss
+++ b/src/pages/UploadPage/UploadPage.scss
@@ -31,13 +31,14 @@
     }
 
     &__success-container {
+        @include mixins.flexbox(center, center, $direction: column);
         text-align: center;
     }
 
     &__success-image {
         @include mixins.rounded-corners();
-        margin: 2rem;
-        width: 20rem;
+        width: 100%;
+        max-width: 20rem;
     }
 
     &__success-message {
